--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/morgan": "^1.9.9",
     "tsc-watch": "^6.2.1",
     "typescript": "^5.7.2"
   }
